# OpenFDCM

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml
docs/: CMakeLists.txt
examples/: poseestimation.py  templatematching.py
examples/assets/obj_01/scene_0/: camera_0.scene
examples/assets/obj_01/scene_2/: camera_0.scene
examples/assets/obj_01/scene_4/: camera_0.scene
examples/assets/obj_01/scene_6/: camera_0.scene
examples/assets/obj_01/templates/: template_104.tmpl  template_105.tmpl  template_106.tmpl  template_107.tmpl  template_108.tmpl  template_11.tmpl  template_112.tmpl  template_12.tmpl  template_14.tmpl  template_17.tmpl  template_2.tmpl  template_20.tmpl  template_24.tmpl  template_26.tmpl  template_27.tmpl  template_32.tmpl  template_34.tmpl  template_38.tmpl  template_41.tmpl  template_46.tmpl  template_55.tmpl  template_56.tmpl  template_59.tmpl  template_61.tmpl  template_62.tmpl  template_63.tmpl  template_65.tmpl  template_74.tmpl  template_75.tmpl  template_8.tmpl  template_81.tmpl  template_89.tmpl  template_92.tmpl  template_95.tmpl
examples/assets/obj_02/scene_0/: camera_0.scene
examples/assets/obj_02/scene_1/: camera_0.scene
examples/assets/obj_02/scene_4/: camera_0.scene
examples/assets/obj_02/templates/: template_12.tmpl  template_14.tmpl  template_16.tmpl  template_2.tmpl  template_22.tmpl  template_3.tmpl  template_30.tmpl  template_31.tmpl  template_32.tmpl  template_33.tmpl  template_4.tmpl  template_40.tmpl  template_41.tmpl  template_53.tmpl  template_54.tmpl  template_55.tmpl  template_56.tmpl  template_59.tmpl  template_60.tmpl  template_66.tmpl  template_69.tmpl  template_7.tmpl  template_73.tmpl  template_74.tmpl  template_78.tmpl  template_80.tmpl  template_82.tmpl  template_83.tmpl  template_84.tmpl  template_86.tmpl  template_90.tmpl
examples/assets/obj_03/scene_8/: camera_0.scene
examples/assets/obj_03/templates/: template_1.tmpl  template_16.tmpl  template_18.tmpl  template_2.tmpl  template_24.tmpl  template_29.tmpl  template_3.tmpl  template_31.tmpl  template_33.tmpl  template_34.tmpl  template_35.tmpl  template_36.tmpl  template_38.tmpl  template_39.tmpl  template_4.tmpl  template_42.tmpl  template_43.tmpl  template_44.tmpl  template_48.tmpl  template_49.tmpl  template_5.tmpl  template_50.tmpl  template_52.tmpl  template_53.tmpl  template_54.tmpl  template_6.tmpl  template_63.tmpl  template_66.tmpl  template_67.tmpl  template_7.tmpl  template_73.tmpl  template_74.tmpl  template_75.tmpl  template_81.tmpl  template_84.tmpl  template_89.tmpl  template_90.tmpl  template_91.tmpl  template_92.tmpl
examples/assets/obj_04/scene_0/: camera_0.scene
examples/assets/obj_04/scene_3/: camera_0.scene
examples/assets/obj_04/scene_5/: camera_0.scene
examples/assets/obj_04/templates/: template_100.tmpl  template_106.tmpl  template_108.tmpl  template_11.tmpl  template_111.tmpl  template_112.tmpl  template_116.tmpl  template_12.tmpl  template_121.tmpl  template_13.tmpl  template_17.tmpl  template_18.tmpl  template_2.tmpl  template_21.tmpl  template_26.tmpl  template_30.tmpl  template_31.tmpl  template_34.tmpl  template_38.tmpl  template_39.tmpl  (+21 more)
modules/core/: CMakeLists.txt
modules/core/include/openfdcm/: core.h
modules/core/include/openfdcm/core/: drawing.h  dt3.h  error.h  imgproc.h  math.h  serialization.h  version.h.in
modules/core/include/openfdcm/core/cuda/: adapters.cuh  cuarray.cuh  cudrawing.cuh  cuimgproc.cuh  cumath.cuh
modules/core/src/: drawing.cpp
modules/core/src/cuda/: cudrawing.cu
modules/matching/: CMakeLists.txt
modules/matching/include/openfdcm/: matching.h
modules/matching/include/openfdcm/matching/: featuremap.h  matchStrategy.h  matchstrategy.h  optimizestrategy.h  penaltystrategy.h  searchstrategy.h
modules/matching/include/openfdcm/matching/featuremaps/: dt3cpu.h
modules/matching/include/openfdcm/matching/featuremaps/cuda/: dt3cuda.cuh
modules/matching/include/openfdcm/matching/matchstrategies/: defaultmatch.h
modules/matching/include/openfdcm/matching/optimizerstrategies/: defaultoptimize.h  indulgentoptimize.h
modules/matching/include/openfdcm/matching/optimizestrategies/: batchoptimize.h  defaultoptimize.h  indulgentoptimize.h
modules/matching/include/openfdcm/matching/penaltystrategies/: defaultpenalty.h  exponentialpenalty.h
modules/matching/include/openfdcm/matching/searchstrategies/: concentricrange.h  defaultsearch.h
modules/matching/src/featuremaps/: dt3cpu.cpp
modules/matching/src/featuremaps/cuda/: dt3cuda.cu
modules/matching/src/matchstrategies/: defaultmatch.cpp
modules/matching/src/optimizestrategies/: batchoptimize.cpp  defaultoptimize.cpp  indulgentoptimize.cpp
modules/matching/src/penaltystrategies/: defaultpenalty.cpp  exponentialpenalty.cpp
modules/matching/src/searchstrategies/: concentricrange.cpp  defaultsearch.cpp
modules/python/: CMakeLists.txt
modules/python/include/python_utils/: numpy.h
modules/python/src/: core.cpp  matching.cpp  openfdcm.cpp
notebooks/: general_template_matching_example.ipynb  pose_extimation_example.ipynb
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/src/: drawing.test.cpp  dt3.test.cpp  imgproc.test.cpp  math.test.cpp  serialize.test.cpp
tests/core/src/cuda/: cudrawing.test.cu  cuimgproc.test.cu
tests/matching/: CMakeLists.txt
tests/matching/src/: matchstrategy.test.cpp  penaltystrategy.test.cpp  searchstrategy.test.cpp
tests/matching/src/cuda/: matchstrategy.test.cu
tests/matching/src/featuremaps/: dt3cpu.test.cpp
tests/matching/src/featuremaps/cuda/: dt3cuda.test.cu
tests/matching/src/optimizeStrategies/: batchoptimize.test.cpp  defaultoptimize.test.cpp  indulgentoptimize.test.cpp
tests/python/: requirements.txt  test_matching.py
tests/python/core/: test_dt3.py  test_line.py  test_scene.py  test_serialize.py  test_template.py
tests/python/matching/: test_matching.py
tests/python/multiflash/: test_multiflash.py
tests/test-utils/include/test-utils/: utils.h
(+305 files in other folders)
